make my unit test compatible with java 11 cuz some people are old farts